syntax = "proto3";

option go_package = "github.com/hwsc-org/hwsc-api-blocks/int/hwsc-user-svc/user";

package user;

import "lib/user.proto";
import "lib/authority.proto";

// NOTES:
// any user object returned by svc, will have password field empty string

service UserService {
    rpc GetStatus (UserRequest) returns (UserResponse) {
    }
    rpc CreateUser (UserRequest) returns (UserResponse) {
    }
    rpc DeleteUser (UserRequest) returns (UserResponse) {
    }
    rpc UpdateUser (UserRequest) returns (UserResponse) {
    }
    rpc AuthenticateUser (UserRequest) returns (UserResponse) {
    }
    rpc ListUsers (UserRequest) returns (UserResponse) {
    }
    rpc GetUser (UserRequest) returns (UserResponse) {
    }
    rpc ShareDocument (UserRequest) returns (UserResponse) {
    }
    rpc GetAuthToken (UserRequest) returns (UserResponse) {
    }
    rpc VerifyToken (UserRequest) returns (UserResponse) {
    }
    rpc GetSecret (UserRequest) returns (UserResponse) {
    }

    // TODO add a REST endpoint later
    rpc MakeNewSecret (UserRequest) returns (UserResponse) {
    }
}

message UserRequest {
    lib.Identification identification = 1;
    lib.User user = 2;
    string duid = 3;
    repeated string uuids_to_share_duid = 4;
}

message UserResponse {
    oneof status {
        uint32 code = 1;
    }
    string message = 2;
    lib.Identification identification = 3;
    lib.User user = 4;
    repeated lib.User user_collection = 5; // for ListUsers response
}
